--- a/doc.html
+++ b/doc.html
@@ -311,7 +311,7 @@
           <h2 class="section__title">An example arcitecture for for setting up a cluster of caching services</h2>
           <p>The following figure represents the complete architeture of a cluter of caching services running simultaneously but inpendently on separate Virtual Machines.
           </p>
-          <img src="arch.PNG" alt="An example architeture for setup" style="width:900px;height:600px;">
+          <img src="arch.png" alt="An example architeture for setup" style="width:900px;height:600px;">
 
 
         </section>
